Create basic design for home paged

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,18 @@
   </head>
 
   <body>
-    <header class="z-10 w-full fixed p-2 header_bg ">
-
-    </header>
-    <main class=" h-screen pt-50 flex flex-row">
-      <aside class="bg-blue w-24 bg-red-200 h-screen">Menu</aside>
-      <div class="bg-purple h-screen flex-1 bg-red-500">Main</div>
+    <header class="z-10 w-full fixed p-2 header_bg"></header>
+    <main class="bg-gray-50 h-screen pt-14 flex flex-row">
+      <aside class="fixed h-screen w-96 pl-32 pt-24">
+        <div class="h-64 sidebar_bg shadow-sm">
+          <h3>Year goals</h3>
+          <h3>Week goals</h3>
+          <h3>Today goals</h3>
+        </div>
+      </aside>
+      <div class="h-screen ml-96 flex-1 pt-24 px-12 pr-32">
+        <div class="bor w-full h-64"></div>
+      </div>
     </main>
     <footer></footer>
   </body>
