- Add partial for header.html - Add partial for main.html

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
 
-  <body>
-    <header class="z-10 w-full fixed p-2 header_bg"></header>
-    <main class="bg-gray-50 h-screen pt-14 flex flex-row">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body>
+
+  <!-- <main class="bg-gray-50 h-screen pt-14 flex flex-row">
       <aside class="fixed h-screen w-96 pl-32 pt-24">
         <div class="h-64 sidebar_bg shadow-sm">
           <h3>Year goals</h3>
@@ -21,26 +22,27 @@
         <div class="bor w-full h-64"></div>
       </div>
     </main>
-    <footer></footer>
-  </body>
+    <footer></footer> -->
+</body>
 
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
 
-  <!-- TODO: Add SDKs for Firebase products that you want to use
+<!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
-  <script>
-    // Your web app's Firebase configuration
-    var firebaseConfig = {
-      apiKey: "AIzaSyAG3JcaJWV-Nd-s1SRVYgAP_y49eoHXeaI",
-      authDomain: "todo-list-c32f2.firebaseapp.com",
-      projectId: "todo-list-c32f2",
-      storageBucket: "todo-list-c32f2.appspot.com",
-      messagingSenderId: "129154481425",
-      appId: "1:129154481425:web:27013ad934f9035a6c20b0",
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-  </script>
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyAG3JcaJWV-Nd-s1SRVYgAP_y49eoHXeaI",
+    authDomain: "todo-list-c32f2.firebaseapp.com",
+    projectId: "todo-list-c32f2",
+    storageBucket: "todo-list-c32f2.appspot.com",
+    messagingSenderId: "129154481425",
+    appId: "1:129154481425:web:27013ad934f9035a6c20b0",
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
+
 </html>
